Issue #6: modal now covers entire screen, and nearly blacks out background.

--- a/default.css
+++ b/default.css
@@ -48,3 +48,15 @@
   color: white;
 }
 #userReviewButton:hover { color: #AFA; }
+#userReviewModal {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 10;
+}
